--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,8 @@ img {
   --third-back-color: #f5f4fa;
   --main-black-color: #000000;
   --footer-links-color: rgba(255, 255, 255, 0.6);
+  --service-item-color: #eeeeee;
+  --icon-color: #afb1b8;
   --section-pt: 94px;
   --section-pb: 94px;
 }
@@ -240,7 +242,15 @@ body {
 /*============== HERO PAGE 1 ==============*/
 
 .hero {
-  background: var(--secondary-back-color);
+  background-color: var(--secondary-back-color);
+  background-image: linear-gradient(
+      rgba(47, 48, 58, 0.4),
+      rgba(47, 48, 58, 0.4)
+    ),
+    url("/images/background-hero.jpg");
+  max-width: 1600px;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .modal-btn {
@@ -404,8 +414,8 @@ body {
 .team-text {
   padding-top: 30px;
   padding-bottom: 30px;
-  padding-left: 15px;
-  padding-right: 15px;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 .team-member-skills {
@@ -417,7 +427,49 @@ body {
   color: var(--usually-text-color);
 }
 
+.social-list {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.social-list-link {
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--main-color);
+}
+
+.social-list-link:hover,
+.social-list-link:focus {
+  color: var(--main-color);
+  background-color: var(--acent-color);
+}
+
+.social-list-icon:hover,
+.social-list-icon:focus {
+  fill: var(--main-color);
+}
+
+.social-list-icon {
+  fill: var(--icon-color);
+  width: 20px;
+  height: 20px;
+}
+
 /*============== END TEAM ==============*/
+
+/*============== REGULAR CUSTOMERS ==============*/
+
+.customers {
+  padding-top: var(--section-pt);
+  padding-bottom: var(--section-pb);
+}
+
+/*============== END REGULAR CUSTOMERS ==============*/
 
 /*============== HERO PAGE 2 ==============*/
 
@@ -455,7 +507,7 @@ body {
   height: 38px;
   margin: 0 auto;
 
-  background: #f5f4fa;
+  background: var(--third-back-color);
   border-radius: 4px;
 }
 
@@ -487,6 +539,10 @@ body {
   padding-left: 24px;
 }
 
+.services-link:hover,
+.services-link:focus {
+}
+
 .services-name {
   margin-bottom: 4px;
 
@@ -499,12 +555,21 @@ body {
 
 .services-item {
   flex-basis: calc(100% / 9 - 30px);
+  max-width: 370px;
   margin-left: 30px;
   margin-top: 30px;
   background: var(--main-color);
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-    0px 2px 1px rgba(0, 0, 0, 0.2);
-  border-radius: 0px 0px 4px 4px;
+  border: 1px solid #eeeeee;
+  box-sizing: border-box;
+}
+
+.services-item:hover,
+.services-item:focus {
+  background: var(--main-color);
+  border: 1px solid var(--service-item-color);
+  box-sizing: border-box;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
 .about-services {
