--- a/css/style.css
+++ b/css/style.css
@@ -294,7 +294,7 @@ body {
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
     ),
-    url("../images/background-hero.jpg");
+    url("/images/background-hero.jpg");
   max-width: 1600px;
   background-repeat: no-repeat;
   background-size: cover;
