--- a/css/style.css
+++ b/css/style.css
@@ -290,8 +290,11 @@ body {
 
 .hero {
   background-color: var(--secondary-back-color);
-  background-image: url("/images/background-hero.jpg"),
-    linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4));
+  background-image: linear-gradient(
+      rgba(47, 48, 58, 0.4),
+      rgba(47, 48, 58, 0.4)
+    ),
+    url("/images/background-hero.jpg");
   max-width: 1600px;
   background-repeat: no-repeat;
   background-size: cover;
